nginx/ingress-tenant1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: tenant1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http: 
      paths:
      - path: /helloworldtenant1
        backend:
          serviceName: hello-app-tenant1
          servicePort: 8080
