nginx/ingress-tenant2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: tenant2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http: 
      paths:
      - path: /helloworldtenant2
        backend:
          serviceName: hello-app-tenant2
          servicePort: 8080
